added backcolor to border

--- a/charmap/MainWindow.xaml
+++ b/charmap/MainWindow.xaml
@@ -56,7 +56,7 @@
 
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <Border BorderThickness="1" BorderBrush="#1F000000" MinWidth="32" MinHeight="32">
+                            <Border Background="#01000000" BorderThickness="1" BorderBrush="#09000000" MinWidth="32" MinHeight="32">
                                 <TextBlock Text="{Binding }" TextAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" FontFamily="{Binding DataContext.SelectedFontFamily, ElementName=MainGrid}" FontSize="{Binding Value, ElementName=fontSize}" />
                                 <i:Interaction.Triggers>
                                     <i:EventTrigger EventName="MouseLeftButtonDown">
